--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   <div id="search_area"> 
      <form id="search">
         <input type="search" id="searchbox" name="searchbox">
+        <div>
         <button id="button1">Google Search</button>
         <button id="button2">I'm Feeling Lucky</button>
+        </div>
      </form>
   </div>    
   <div id="offered_language">
@@ -50,9 +52,9 @@
      </div>
      <div id="footer_bottom_right">
          <ul id="footer_bottom_right_ul">
-            <li>Privacy</li>
-            <li>Terms</li>
-            <li>Settings</li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Settings</a></li>
 
          </ul>
 
