Header amended to add little details. profile icon now jumps to Nathans github page.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 
 
 <body>
- <header class="header">
+ <header id="header">
      <ul>
-         <li>Gmail</li>
-         <li>Images</li>
+         <li><a href="" class="header">Gmail</a></li>
+         <li><a href="" class="header">Images</a></li>
+         <li><a href=""><img src="image/app.png" alt="google app icon" 
+            width="20px;"></a></li>
+        <li id="profile_pic"><a href="https://github.com/CanadianSamurai"><img src="image/profile-pic.png" 
+            alt="Nathans mini profile pic" width="30px"></a></li>
 
      </ul>
  </header>
