Every detail amended. Ready to publish.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
  </h1>
   <div id="search_area"> 
      <form id="search">
+        <a href=""><img id="mic_icon" src="image/mic_black_small.png"
+            alt="mic icon"><span title="Search by voice"></span></a>
         <input type="search" id="searchbox" name="searchbox">
         <div>
         <button id="button1">Google Search</button>
